syntax = "proto3";
package fetch;

import "google/protobuf/timestamp.proto";

option csharp_namespace = "WA4D0GGrpcService";

message CertificateDataDTO {
	int32 id = 1;
	string certificateHash = 2;
	string algorithm = 3;
	google.protobuf.Timestamp startDate = 4;
	google.protobuf.Timestamp endDate = 5;
}

message CertificateSubjectDTO {
	int32 id = 1;
	string subjectName = 2;
	string subjectPhone = 3;
	string subjectComment = 4;
	repeated CertificateDataDTO certificates = 5;
}

message CertificateSubjectRequest {
	string storageName = 1;
}

message CertificateSubjectReply {
	repeated CertificateSubjectDTO subjects = 1;
}

service X509Comm {
	rpc FetchCertificateSubjects (CertificateSubjectRequest) returns (CertificateSubjectReply);
}